# WASABIEngine

./: .gitignore  AffectiveState.cc  AffectiveState.h  CMakeLists.txt  EmotionContainer.cc  EmotionContainer.h  EmotionConverter.cc  EmotionDynamics.cc  EmotionDynamics.h  Makefile  Mutex.cc  Mutex.h  PrimaryEmotion.cc  README.md  README.txt  SecondaryEmotion.cc  SecondaryEmotion.h  WASABIEngine.cc  WASABIEngine.h  WASABIEngine.pri  WASABIEngine.pro  WASABIEngine.pro.user.2.3pre1  WASABIEngine_global.h  WASABIExports.cc  WASABIExports.cpp  WASABIExports.h  WASABIRunner.cc  attendeeupdatethread.cpp  attendeeupdatethread.h  cogaAttendee.cc  cogaAttendee.h  cogaEmotionalAttendee.cc  cogaEmotionalAttendee.h
concurrent/: attendeeupdatethread.cpp  attendeeupdatethread.h  attendeeworkerthread.cpp  attendeeworkerthread.h  mutex.cpp  mutex.h  thread.cpp  thread.h
doc/: .gitignore  Doxyfile
doxygen/html/: _emotion_container_8cc_source.html  _emotion_container_8h_source.html  _emotion_converter_8cc_source.html  _primary_emotion_8cc_source.html  _primary_emotion_8h_source.html  _secondary_emotion_8cc_source.html  _w_a_s_a_b_i_engine_8h_source.html  _w_a_s_a_b_i_engine__global_8h_source.html  _w_a_s_a_b_i_runner_8cc_source.html  annotated.html  class_affect_polygon.html  (+20 more)
includes/: EmotionConverter.h  EmotionDynamics.h  PrimaryEmotion.h  cogaAttendee.h  cogaEmotionalAttendee.h
src/: AffectiveState.cc  EmotionContainer.cc  EmotionConverter.cc  EmotionDynamics.cc  PrimaryEmotion.cc  SecondaryEmotion.cc  WASABIEngine.cc  WASABIRunner.cc  cogaAttendee.cc  cogaEmotionalAttendee.cc
(+85 files in other folders)
